...
                    mainMenuViewModel.findNews(author: auth, keywords: keyw, tags: tags)
                } secondaryAction: {
                    mainMenuViewModel.updateNews()
                }
                
            }, label: {
                Text("Search News")
            })
            .modifier(ModifierTextFromImagePicker())
            .onAppear{
                mainMenuViewModel.updateNews()
            }
            
...
