//
//  finalStudyAppUITests.swift
//  finalStudyAppUITests
//
//  Created by dunice on 28.11.2022.
//

import XCTest

class finalStudyAppUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        app.textFields["Email"].tap()
        app.textFields["Email"].typeText("Hasbik@mail.ru")
        
        app.textFields["Password"].tap()
        app.textFields["Password"].typeText("HasbikHasbik")
       
        
        app.buttons["Log In"].tap()
        
        
        XCTAssert(app.buttons["Search News"].exists)
        
        
        


        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
